Import of JOHANL/Devel-CoverX-Covered-0.002 from CPAN.
gitpan-cpan-distribution: Devel-CoverX-Covered
gitpan-cpan-version:      0.002
gitpan-cpan-path:         JOHANL/Devel-CoverX-Covered-0.002.tar.gz
gitpan-cpan-author:       JOHANL
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,6 +1,14 @@
 = Feature oriented Revision history for Devel-CoverX-Covered =
 
 
+= 0.002
+
+* Misc basic things like portable tests, deps in Build.PL, etc.
+
+* covered info -- List all known files for easy reference
+
+
+
 = 0.001
 
 * covered runs
