--- a/README
+++ b/README
@@ -9,16 +9,16 @@ DESCRIPTION
     of the application becomes less and less obvious.
 
     This is especially true for tests on the acceptance / integration /
-    system level (rather than on the unit level where the focus of tests is
-    often more focused and easily deduced).
+    system level (rather than on the unit level where the tests are more
+    focused and easily deduced).
 
     This is also extra obvious for developers new to the code base who have
     no clue what types of code may need extra testing, or about common
     idioms for testing certain parts of the application.
 
   Enter Devel::CoverX::Covered
-    This module extracts and stores the relationship between covering test
-    files and covered source files.
+    Devel::CoverX::Covered extracts and stores the relationship between
+    covering test files and covered source files.
 
     This makes it possible to
 
@@ -54,11 +54,12 @@ SYNOPSIS
       PERL5OPT=-MDevel::Cover prove -r t
 
       #Collect covered and caller information
+      #  Run this _before_ running "cover"
       #  Don't run with Devel::Covered enabled
       covered runs
 
       #Post process to generate covered database
-      cover -report Covered
+      cover -report Html_basic
 
   During development
       #Query the covered database per source file
@@ -66,6 +67,10 @@ SYNOPSIS
       t/myapp-do_stuff.t
       t/myapp-do_stuff/edge_case1.t
       t/myapp-do_stuff/edge_case2.t
+
+
+      #List all known files
+      covered info
 
     -- not implemented --
 
@@ -87,6 +92,15 @@ SYNOPSIS
       lib/MyApp/DoStuff.pm
       lib/MyApp/DoStuff/DoOtherStuff.pm
 
+      #Query the covered database per test file, but also show covered
+      #subroutines (\t separated)
+      covered subs_by --test_file=t/myapp-do_stuff.t
+      lib/MyApp/DoStuff.pm       as_xml
+      lib/MyApp/DoStuff.pm       do_stuff
+      lib/MyApp/DoStuff.pm       new
+      lib/MyApp/DoStuff/DoOtherStuff.pm   new
+      lib/MyApp/DoStuff/DoOtherStuff.pm   do_other_stuff
+
 
       #Query the covered database for details of a source file
       covered lines --test_file=lib/MyApp/DoStuff.pm --metric=statement
@@ -99,6 +113,36 @@ SYNOPSIS
       99, 2
       102, 2
       104, 1
+
+SEE ALSO
+    Devel::Cover
+
+    Devel::PerlySense - Emacs integration for Devel::CoverX::Covered (soon)
+
+AUTHOR
+    Johan Lindström, "<johanl[ÄT]DarSerMan.com>"
+
+BUGS AND CAVEATS
+  BUG REPORTS
+    Please report any bugs or feature requests to
+    "bug-devel-coverx-covered@rt.cpan.org", or through the web interface at
+    <http://rt.cpan.org/NoAuth/ReportBug.html?Queue=Devel-CoverX-Covered>. I
+    will be notified, and then you'll automatically be notified of progress
+    on your bug as I make changes.
+
+  CAVEATS
+  KNOWN BUGS
+    Well, this is more of a cop out really...
+
+    Since the covered database file is stuffed into the cover_db directory,
+    Devel::Cover's "cover" program will report the Cover database as invalid
+    when in fact it works perfectly well.
+
+COPYRIGHT & LICENSE
+    Copyright 2007 Johan Lindström, All Rights Reserved.
+
+    This program is free software; you can redistribute it and/or modify it
+    under the same terms as Perl itself.
 
 POD ERRORS
     Hey! The above document had some coding errors, which are explained
