Import of JOHANL/Devel-CoverX-Covered-0.003 from CPAN.
gitpan-cpan-distribution: Devel-CoverX-Covered
gitpan-cpan-version:      0.003
gitpan-cpan-path:         JOHANL/Devel-CoverX-Covered-0.003.tar.gz
gitpan-cpan-author:       JOHANL
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,6 +1,12 @@
 = Feature oriented Revision history for Devel-CoverX-Covered =
 
 
+= 0.003
+
+* covered by --test_file=FILE
+
+
+
 = 0.002
 
 * Misc basic things like portable tests, deps in Build.PL, etc.
