Import of JOHANL/Devel-CoverX-Covered-0.004 from CPAN.
gitpan-cpan-distribution: Devel-CoverX-Covered
gitpan-cpan-version:      0.004
gitpan-cpan-path:         JOHANL/Devel-CoverX-Covered-0.004.tar.gz
gitpan-cpan-author:       JOHANL
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,6 +1,14 @@
 = Feature oriented Revision history for Devel-CoverX-Covered =
 
 
+= 0.004
+
+* Store db size and time by only storing subroutine coverage
+
+* File progress during "covered run"
+
+
+
 = 0.003
 
 * covered by --test_file=FILE
