--- a/README
+++ b/README
@@ -33,7 +33,7 @@ DESCRIPTION
         row, or sub.
 
   Usage Scenarios
-    Using this module it shoud be possible to implement e.g.
+    Using this module it should be possible to implement e.g.
 
     *   From within the editor, list or open interesting source / test
         files, depending on the editor context (current file, sub, line).
@@ -105,20 +105,27 @@ SYNOPSIS
 
       #Query the covered database for details of a source file
       covered lines --test_file=lib/MyApp/DoStuff.pm --metric=statement
-      11, 1
-      17, 0
-      26, 0
-      32, 1
-      77, 3
-      80, 1
-      99, 2
-      102, 2
-      104, 1
+      11\t1
+      17\t0
+      26\t0
+      32\t1
+      77\t3
+      80\t1
+      99\t2
+      102\t2
+      104\t1
+
+EDITOR SUPPORT
+  Emacs
+    Devel::PerlySense has support for listing and navigating to the "other"
+    files corresponding to the current one.
+
+  Vim
+    Ovid provides a few simple but conveinent key bindings here:
+    <http://use.perl.org/~Ovid/journal/36030>.
 
 SEE ALSO
     Devel::Cover
-
-    Devel::PerlySense - Emacs integration for Devel::CoverX::Covered (soon)
 
 AUTHOR
     Johan Lindström, "<johanl[ÄT]DarSerMan.com>"
