Import of JOHANL/Devel-CoverX-Covered-0.005 from CPAN.
gitpan-cpan-distribution: Devel-CoverX-Covered
gitpan-cpan-version:      0.005
gitpan-cpan-path:         JOHANL/Devel-CoverX-Covered-0.005.tar.gz
gitpan-cpan-author:       JOHANL
gitpan-cpan-maturity:     released

--- a/README
+++ b/README
@@ -117,8 +117,8 @@ SYNOPSIS
 
 EDITOR SUPPORT
   Emacs
-    Devel::PerlySense has support for listing and navigating to the "other"
-    files corresponding to the current one.
+    Devel::PerlySense has a feature "Go to Tests - Other Files" for
+    navigating to related files.
 
   Vim
     Ovid provides a few simple but conveinent key bindings here:
