Import of JOHANL/Devel-CoverX-Covered-0.006 from CPAN.
gitpan-cpan-distribution: Devel-CoverX-Covered
gitpan-cpan-version:      0.006
gitpan-cpan-path:         JOHANL/Devel-CoverX-Covered-0.006.tar.gz
gitpan-cpan-author:       JOHANL
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,14 @@
 = Feature oriented Revision history for Devel-CoverX-Covered =
 
+= 0.006
+
+* Moved storage of file names to its own table in order to save disk
+  space.
+
+* Moved covered database from cover_db/covered to ./covered
+
+
+
 = 0.005
 
 * Fixed bug
