--- a/README
+++ b/README
@@ -10,10 +10,10 @@ DESCRIPTION
 
     This is especially true for tests on the acceptance / integration /
     system level (rather than on the unit level where the tests are more
-    focused and easily deduced).
+    concentrated and easily deduced).
 
-    This is also extra obvious for developers new to the code base who have
-    no clue what types of code may need extra testing, or about common
+    This is also extra difficult for developers new to the code base who
+    have no clue what types of code may need extra testing, or about common
     idioms for testing certain parts of the application.
 
   Enter Devel::CoverX::Covered
@@ -43,11 +43,12 @@ DESCRIPTION
         a quicker feedback loop than running the entire test suite.
 
   Development Status
-    This is a first release with limited funcionality.
+    Early release. Solid, but somewhat prone to change as a result of
+    feedback.
 
 SYNOPSIS
   Nightly / automatic run
-      #Clean up from previous test run
+      #Clean up from previous test run (optional)
       cover -delete
 
       #Test run with coverage instrumentation
@@ -55,7 +56,7 @@ SYNOPSIS
 
       #Collect covered and caller information
       #  Run this _before_ running "cover"
-      #  Don't run with Devel::Covered enabled
+      #  Don't run with Devel::Cover enabled
       covered runs
 
       #Post process to generate covered database
@@ -115,14 +116,35 @@ SYNOPSIS
       102\t2
       104\t1
 
+THE COVERED DATABASE
+    The Devel::CoverX::Covered database is the "covered" directory located
+    next to the "cover_db" directory. It is created by running the "covered
+    runs" command (see the SYNOPSIS above).
+
 EDITOR SUPPORT
   Emacs
     Devel::PerlySense has a feature "Go to Tests - Other Files" for
     navigating to related files.
 
   Vim
-    Ovid provides a few simple but conveinent key bindings here:
-    <http://use.perl.org/~Ovid/journal/36030>.
+    Ovid provides similar key bindings here:
+    Lhttp://use.perl.org/~Ovid/journal/36280>.
+
+PLAYING WITH OTHERS
+  Test::Aggregate
+    Tests run by Test::Aggregate won't be reported properly. That's because
+    the single .t file running all the aggregate tests will be reported as
+    the covering test file.
+
+    The workaround is to perform the Devel::Cover test run without
+    Test::Aggregate, i.e. do something like (assuming "aggtest" contains
+    your aggregate tests):
+
+      PERL5OPT=-MDevel::Cover prove -r t aggtest
+
+    The extra time taken to do this is probably not a problem since running
+    tests with Devel::Cover enabled is so very slow anyway. The startup time
+    is simply less significant here.
 
 SEE ALSO
     Devel::Cover
@@ -139,12 +161,13 @@ BUGS AND CAVEATS
     on your bug as I make changes.
 
   CAVEATS
-  KNOWN BUGS
-    Well, this is more of a cop out really...
+    The Devel::Cover db version is hard coded since it's not exposed by
+    Devel::Cover. So that's a bit fragile.
 
-    Since the covered database file is stuffed into the cover_db directory,
-    Devel::Cover's "cover" program will report the Cover database as invalid
-    when in fact it works perfectly well.
+  KNOWN BUGS
+    If you delete a .t file, running the test suite again won't de-register
+    it from the covered database. To get rid of it you need to delete the
+    "covered" directory and re-run the entire coverage test suite.
 
 COPYRIGHT & LICENSE
     Copyright 2007 Johan Lindström, All Rights Reserved.
