--- a/Changes
+++ b/Changes
@@ -1,5 +1,12 @@
 = Feature oriented Revision history for Devel-CoverX-Covered =
 
+= 0.007
+
+* Avoid collection information for the "prove" program (or calling
+  files matching --rex_skip_calling_file).
+
+
+
 = 0.006
 
 * Moved storage of file names to its own table in order to save disk
