Import of JOHANL/Devel-CoverX-Covered-0.008 from CPAN.
gitpan-cpan-distribution: Devel-CoverX-Covered
gitpan-cpan-version:      0.008
gitpan-cpan-path:         JOHANL/Devel-CoverX-Covered-0.008.tar.gz
gitpan-cpan-author:       JOHANL
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,16 @@
 = Feature oriented Revision history for Devel-CoverX-Covered =
 
+= 0.008
+
+* "covered info" now outputs version
+
+* Moved storage of metric types to its own table in order to save disk
+  space.
+
+* Memoized lookup tables
+
+
+
 = 0.007
 
 * Avoid collection information for the "prove" program (or calling
