Import of JOHANL/Devel-CoverX-Covered-0.01 from CPAN.
gitpan-cpan-distribution: Devel-CoverX-Covered
gitpan-cpan-version:      0.01
gitpan-cpan-path:         JOHANL/Devel-CoverX-Covered-0.01.tar.gz
gitpan-cpan-author:       JOHANL
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,6 +1,13 @@
 = Feature oriented Revision history for Devel-CoverX-Covered =
 
-= 0.008
+
+= 0.010
+
+* Fixed a rather stupid bug in "covered" script.
+
+
+
+= 0.009
 
 * Added option --rex_skip_source_file to specify (multiple) regexes to
   skip reporting on source files.
