Import of JOHANL/Devel-CoverX-Covered-0.012 from CPAN.
gitpan-cpan-distribution: Devel-CoverX-Covered
gitpan-cpan-version:      0.012
gitpan-cpan-path:         JOHANL/Devel-CoverX-Covered-0.012.tar.gz
gitpan-cpan-author:       JOHANL
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -3,6 +3,13 @@ Feature oriented Revision history for Devel-CoverX-Covered
 ==========================================================
 
 
+0.012
+-----
+
+* Fixed memory leak.
+
+
+
 0.011
 -----
 
